# super-rust-boy-web

./: .gitignore  Cargo.toml  README.md
app/: index.html  index.js  package-lock.json  package.json  webpack.config.js
src/: lib.rs
