[package]
name = "super-rust-boy-web"
version = "0.1.0"
authors = ["simon <simon@jotta.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustboyweb"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.rustboy]
git = "https://github.com/super-rust-boy/super-rust-boy"
branch = "feature/wasm_support"
default-features = false